// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourcesTree After changing expanded nodes Shows the tree with four.js, five.js and six.js expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      expanded={
        Array [
          "four.js",
          "five.js",
          "six.js",
        ]
      }
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;

exports[`SourcesTree Should show a 'No Sources' message if there are no sources 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="no-sources-message"
    key="empty"
  >
    This page has no sources.
  </div>
</div>
`;

exports[`SourcesTree Should show the tree with nothing expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;

exports[`SourcesTree When loading initial source Shows the tree with one.js, two.js and three.js expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      expanded={
        Array [
          "one.js",
          "two.js",
          "three.js",
        ]
      }
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;

exports[`SourcesTree on receiving new props updates highlighted items updates highlightItems if selectedSource changes 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      highlightItems={
        Array [
          Object {
            "contents": Object {
              "displayURL": Object {
                "filename": "three.js",
                "group": "mdn.com",
                "path": "/three.js",
                "search": "",
              },
              "extensionName": null,
              "id": "server1.conn13.child1/41",
              "isBlackBoxed": false,
              "isExtension": false,
              "isOriginal": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "parts": Array [
                Object {
                  "mainThreadHostIfRoot": null,
                  "part": "FakeThread",
                  "path": "FakeThread",
                },
                Object {
                  "mainThreadHostIfRoot": "http://www.example.com",
                  "part": "mdn.com",
                  "path": "FakeThread/mdn.com",
                },
                Object {
                  "mainThreadHostIfRoot": null,
                  "part": "three.js",
                  "path": "FakeThread/mdn.com/three.js",
                },
              ],
              "relativeUrl": "http://mdn.com/three.js",
              "thread": "FakeThread",
              "url": "http://mdn.com/three.js",
            },
            "name": "three.js",
            "path": "FakeThread/mdn.com/three.js",
            "type": "source",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Object {
                  "displayURL": Object {
                    "filename": "four.js",
                    "group": "mdn.com",
                    "path": "/four.js",
                    "search": "",
                  },
                  "extensionName": null,
                  "id": "server1.conn13.child1/42",
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isOriginal": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "parts": Array [
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "FakeThread",
                      "path": "FakeThread",
                    },
                    Object {
                      "mainThreadHostIfRoot": "http://www.example.com",
                      "part": "mdn.com",
                      "path": "FakeThread/mdn.com",
                    },
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "four.js",
                      "path": "FakeThread/mdn.com/four.js",
                    },
                  ],
                  "relativeUrl": "http://mdn.com/four.js",
                  "thread": "FakeThread",
                  "url": "http://mdn.com/four.js",
                },
                "name": "four.js",
                "path": "FakeThread/mdn.com/four.js",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "displayURL": Object {
                    "filename": "four.js [original]",
                    "group": "mdn.com",
                    "path": "/four.js%20[original]",
                    "search": "",
                  },
                  "extensionName": null,
                  "id": "server1.conn13.child1/42/originalSource-sha",
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isOriginal": true,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "parts": Array [
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "FakeThread",
                      "path": "FakeThread",
                    },
                    Object {
                      "mainThreadHostIfRoot": "http://www.example.com",
                      "part": "mdn.com",
                      "path": "FakeThread/mdn.com",
                    },
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "four.js%20[original]",
                      "path": "FakeThread/mdn.com/four.js%20[original]",
                    },
                  ],
                  "relativeUrl": "http://mdn.com/four.js [original]",
                  "thread": "FakeThread",
                  "url": "http://mdn.com/four.js [original]",
                },
                "name": "four.js%20[original]",
                "path": "FakeThread/mdn.com/four.js%20[original]",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "displayURL": Object {
                    "filename": "one.js",
                    "group": "mdn.com",
                    "path": "/one.js",
                    "search": "",
                  },
                  "extensionName": null,
                  "id": "server1.conn13.child1/39",
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isOriginal": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "parts": Array [
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "FakeThread",
                      "path": "FakeThread",
                    },
                    Object {
                      "mainThreadHostIfRoot": "http://www.example.com",
                      "part": "mdn.com",
                      "path": "FakeThread/mdn.com",
                    },
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "one.js",
                      "path": "FakeThread/mdn.com/one.js",
                    },
                  ],
                  "relativeUrl": "http://mdn.com/one.js",
                  "thread": "FakeThread",
                  "url": "http://mdn.com/one.js",
                },
                "name": "one.js",
                "path": "FakeThread/mdn.com/one.js",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "displayURL": Object {
                    "filename": "three.js",
                    "group": "mdn.com",
                    "path": "/three.js",
                    "search": "",
                  },
                  "extensionName": null,
                  "id": "server1.conn13.child1/41",
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isOriginal": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "parts": Array [
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "FakeThread",
                      "path": "FakeThread",
                    },
                    Object {
                      "mainThreadHostIfRoot": "http://www.example.com",
                      "part": "mdn.com",
                      "path": "FakeThread/mdn.com",
                    },
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "three.js",
                      "path": "FakeThread/mdn.com/three.js",
                    },
                  ],
                  "relativeUrl": "http://mdn.com/three.js",
                  "thread": "FakeThread",
                  "url": "http://mdn.com/three.js",
                },
                "name": "three.js",
                "path": "FakeThread/mdn.com/three.js",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "displayURL": Object {
                    "filename": "two.js",
                    "group": "mdn.com",
                    "path": "/two.js",
                    "search": "",
                  },
                  "extensionName": null,
                  "id": "server1.conn13.child1/40",
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isOriginal": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "parts": Array [
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "FakeThread",
                      "path": "FakeThread",
                    },
                    Object {
                      "mainThreadHostIfRoot": "http://www.example.com",
                      "part": "mdn.com",
                      "path": "FakeThread/mdn.com",
                    },
                    Object {
                      "mainThreadHostIfRoot": null,
                      "part": "two.js",
                      "path": "FakeThread/mdn.com/two.js",
                    },
                  ],
                  "relativeUrl": "http://mdn.com/two.js",
                  "thread": "FakeThread",
                  "url": "http://mdn.com/two.js",
                },
                "name": "two.js",
                "path": "FakeThread/mdn.com/two.js",
                "type": "source",
              },
            ],
            "name": "mdn.com",
            "path": "FakeThread/mdn.com",
            "type": "directory",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "contents": Object {
                      "displayURL": Object {
                        "filename": "four.js",
                        "group": "mdn.com",
                        "path": "/four.js",
                        "search": "",
                      },
                      "extensionName": null,
                      "id": "server1.conn13.child1/42",
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isOriginal": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "parts": Array [
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "FakeThread",
                          "path": "FakeThread",
                        },
                        Object {
                          "mainThreadHostIfRoot": "http://www.example.com",
                          "part": "mdn.com",
                          "path": "FakeThread/mdn.com",
                        },
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "four.js",
                          "path": "FakeThread/mdn.com/four.js",
                        },
                      ],
                      "relativeUrl": "http://mdn.com/four.js",
                      "thread": "FakeThread",
                      "url": "http://mdn.com/four.js",
                    },
                    "name": "four.js",
                    "path": "FakeThread/mdn.com/four.js",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "displayURL": Object {
                        "filename": "four.js [original]",
                        "group": "mdn.com",
                        "path": "/four.js%20[original]",
                        "search": "",
                      },
                      "extensionName": null,
                      "id": "server1.conn13.child1/42/originalSource-sha",
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isOriginal": true,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "parts": Array [
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "FakeThread",
                          "path": "FakeThread",
                        },
                        Object {
                          "mainThreadHostIfRoot": "http://www.example.com",
                          "part": "mdn.com",
                          "path": "FakeThread/mdn.com",
                        },
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "four.js%20[original]",
                          "path": "FakeThread/mdn.com/four.js%20[original]",
                        },
                      ],
                      "relativeUrl": "http://mdn.com/four.js [original]",
                      "thread": "FakeThread",
                      "url": "http://mdn.com/four.js [original]",
                    },
                    "name": "four.js%20[original]",
                    "path": "FakeThread/mdn.com/four.js%20[original]",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "displayURL": Object {
                        "filename": "one.js",
                        "group": "mdn.com",
                        "path": "/one.js",
                        "search": "",
                      },
                      "extensionName": null,
                      "id": "server1.conn13.child1/39",
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isOriginal": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "parts": Array [
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "FakeThread",
                          "path": "FakeThread",
                        },
                        Object {
                          "mainThreadHostIfRoot": "http://www.example.com",
                          "part": "mdn.com",
                          "path": "FakeThread/mdn.com",
                        },
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "one.js",
                          "path": "FakeThread/mdn.com/one.js",
                        },
                      ],
                      "relativeUrl": "http://mdn.com/one.js",
                      "thread": "FakeThread",
                      "url": "http://mdn.com/one.js",
                    },
                    "name": "one.js",
                    "path": "FakeThread/mdn.com/one.js",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "displayURL": Object {
                        "filename": "three.js",
                        "group": "mdn.com",
                        "path": "/three.js",
                        "search": "",
                      },
                      "extensionName": null,
                      "id": "server1.conn13.child1/41",
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isOriginal": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "parts": Array [
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "FakeThread",
                          "path": "FakeThread",
                        },
                        Object {
                          "mainThreadHostIfRoot": "http://www.example.com",
                          "part": "mdn.com",
                          "path": "FakeThread/mdn.com",
                        },
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "three.js",
                          "path": "FakeThread/mdn.com/three.js",
                        },
                      ],
                      "relativeUrl": "http://mdn.com/three.js",
                      "thread": "FakeThread",
                      "url": "http://mdn.com/three.js",
                    },
                    "name": "three.js",
                    "path": "FakeThread/mdn.com/three.js",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "displayURL": Object {
                        "filename": "two.js",
                        "group": "mdn.com",
                        "path": "/two.js",
                        "search": "",
                      },
                      "extensionName": null,
                      "id": "server1.conn13.child1/40",
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isOriginal": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "parts": Array [
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "FakeThread",
                          "path": "FakeThread",
                        },
                        Object {
                          "mainThreadHostIfRoot": "http://www.example.com",
                          "part": "mdn.com",
                          "path": "FakeThread/mdn.com",
                        },
                        Object {
                          "mainThreadHostIfRoot": null,
                          "part": "two.js",
                          "path": "FakeThread/mdn.com/two.js",
                        },
                      ],
                      "relativeUrl": "http://mdn.com/two.js",
                      "thread": "FakeThread",
                      "url": "http://mdn.com/two.js",
                    },
                    "name": "two.js",
                    "path": "FakeThread/mdn.com/two.js",
                    "type": "source",
                  },
                ],
                "name": "mdn.com",
                "path": "FakeThread/mdn.com",
                "type": "directory",
              },
            ],
            "name": "FakeThread",
            "path": "FakeThread",
            "type": "directory",
          },
        ]
      }
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;
